[FMT] Auto-format references

--- a/references.bib
+++ b/references.bib
@@ -1,54 +1,63 @@
 @book{guermond2021finite,
-  title={Finite Elements I: Approximation and Interpolation},
-  author={Guermond, Jean-Luc and Ern, Alexandre},
-  year={2021},
-  publisher={Springer}
+  title =        {Finite Elements I: Approximation and Interpolation},
+  author =       {Guermond, Jean-Luc and Ern, Alexandre},
+  year =         2021,
+  publisher =    {Springer}
 }
 
 @book{rudin1970real,
-  title={Real and Complex Analysis P. 2},
-  author={Rudin, Walter},
-  year={1970},
-  publisher={McGraw-Hill}
+  title =        {Real and Complex Analysis P. 2},
+  author =       {Rudin, Walter},
+  year =         1970,
+  publisher =    {McGraw-Hill}
 }
 
 @book{rudin1976principles,
-  title={Principles of mathematical analysis},
-  author={Rudin, Walter and others},
-  volume={3},
-  year={1976},
-  publisher={McGraw-hill New York}
+  title =        {Principles of mathematical analysis},
+  author =       {Rudin, Walter and others},
+  volume =       3,
+  year =         1976,
+  publisher =    {McGraw-hill New York}
 }
 
 @book{werner2006funktionalanalysis,
-  title={Funktionalanalysis},
-  author={Werner, Dirk},
-  year={2006},
-  publisher={Springer-Verlag}
+  title =        {Funktionalanalysis},
+  author =       {Werner, Dirk},
+  year =         2006,
+  publisher =    {Springer-Verlag}
 }
+
 @book{girault1979finite,
-  title={Finite element approximation of the Navier-Stokes equations},
-  author={Girault, Vivette and Raviart, Pierre-Arnaud},
-  volume={749},
-  year={1979},
-  publisher={Springer Berlin}
+  title =        {Finite element approximation of the Navier-Stokes equations},
+  author =       {Girault, Vivette and Raviart, Pierre-Arnaud},
+  volume =       749,
+  year =         1979,
+  publisher =    {Springer Berlin}
 }
+
 @book{brezis2011functional,
-  title={Functional analysis, Sobolev spaces and partial differential equations},
-  author={Brezis, Haim and Br{\'e}zis, Haim},
-  volume={2},
-  number={3},
-  year={2011},
-  publisher={Springer}
+  title =        {Functional analysis, Sobolev spaces and partial differential
+                  equations},
+  author =       {Brezis, Haim and Br{\'e}zis, Haim},
+  volume =       2,
+  number =       3,
+  year =         2011,
+  publisher =    {Springer}
 }
 
 @book{di2011mathematical,
-  title={Mathematical aspects of discontinuous Galerkin methods},
-  author={Di Pietro, Daniele Antonio and Ern, Alexandre},
-  volume={69},
-  year={2011},
-  publisher={Springer Science \& Business Media}
+  title =        {Mathematical aspects of discontinuous Galerkin methods},
+  author =       {Di Pietro, Daniele Antonio and Ern, Alexandre},
+  volume =       69,
+  year =         2011,
+  publisher =    {Springer Science \& Business Media}
 }
 
-
-
+@inproceedings{dangel2020modular,
+  title =        {Modular Block-diagonal Curvature Approximations for
+                  Feedforward Architectures},
+  author =       {Dangel, Felix and Harmeling, Stefan and Hennig, Philipp},
+  booktitle =    {International Conference on Artificial Intelligence and
+                  Statistics (AISTATS)},
+  year =         2020,
+}
