[ADD] Include Goodfellow math macros, add gitignore

--- a/main.tex
+++ b/main.tex
@@ -40,14 +40,15 @@
 \setlength\cftparskip{0pt}
 \setlength\cftbeforesecskip{2pt}
 
-\newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\bm}[1]{\boldsymbol{#1}}
-\newcommand{\Rn}{\R^n} 
+\newcommand{\Rn}{\R^n}
 \newcommand{\dx}{\mathrm{d}x}
 \newcommand{\rami}[1]{\textcolor{blue}{#1}}
 
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+
+\input{preamble/goodfellow.tex} % follow DL notation from the Goodfellow book
 
 \title{Kfac PINNs }
 \date{November 2022}
