--- a/preamble/goodfellow.tex
+++ b/preamble/goodfellow.tex
@@ -485,6 +485,7 @@
 \DeclareMathOperator{\vecspan}{span}
 \DeclareMathOperator{\overlap}{overlap}
 \DeclareMathOperator{\Cat}{Cat}
+\DeclareMathOperator{\flatten}{vec}
 
 %%%%% NEW MATH DEFINITIONS %%%%%
 \newcommand{\jac}{\mathrm{J}}
