--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,11 @@
                   Statistics (AISTATS)},
   year =         2020,
 }
+
+@inproceedings{martens2015optimizing,
+  title =        {Optimizing Neural Networks with {K}ronecker-factored
+                  Approximate Curvature},
+  author =       {Martens, James and Grosse, Roger},
+  booktitle =    {International Conference on Machine Learning (ICML)},
+  year =         2015,
+}
