--- a/paper/references.bib
+++ b/paper/references.bib
@@ -69,3 +69,10 @@
   booktitle =    {International Conference on Machine Learning (ICML)},
   year =         2015,
 }
+
+@article{skorski2019chain,
+  title={Chain rules for hessian and higher derivatives made easy by tensor calculus},
+  author={Skorski, Maciej},
+  journal={arXiv preprint arXiv:1911.13292},
+  year={2019}
+}
